--- a/src/client/pages/home/index.scss
+++ b/src/client/pages/home/index.scss
@@ -1616,3 +1616,72 @@ body.animation-level-2 .chat-input .record-time:after {
 html.no-touch .chatlist-chat:hover, html.no-touch .chatlist-chat:active {
     --background: var(--light-secondary-text-color);
 }
+
+.btn-circle {
+    --size: 54px;
+    border-radius: 50%;
+    height: var(--size);
+    width: var(--size);
+    line-height: var(--size);
+}
+@media only screen and (max-width: 600px) {
+    .btn-circle {
+        --size: 46px;
+    }
+}
+.btn-circle path {
+    fill: #fff;
+}
+@-webkit-keyframes hide-icon {
+    from {
+    transform: scale(1);
+    opacity: .4}
+to {
+    transform: scale(0.5);
+    opacity: 0}
+}
+body:not(.animation-level-0) .animated-button-icon>.tgico {
+    -webkit-animation: hide-icon .4s forwards ease-in-out;
+    animation: hide-icon .4s forwards ease-in-out;
+}
+#column-center .chat-input .btn-send.send .tgico-send, #column-center .chat-input .btn-send.record .tgico-microphone, #column-center .chat-input .btn-send.edit .tgico-check, #column-center .chat-input .btn-send.schedule .tgico-schedule {
+    -webkit-animation: grow-icon .4s forwards ease-in-out !important;
+    animation: grow-icon .4s forwards ease-in-out !important;
+}
+.animated-button-icon>.tgico {
+    position: absolute;
+    height: 24px;
+    line-height: 24px;
+}
+
+
+
+
+@keyframes hide-icon {
+    from {
+    transform: scale(1);
+    opacity: .4}
+to {
+    transform: scale(0.5);
+    opacity: 0}
+}
+@-webkit-keyframes grow-icon {
+    0% {
+    transform: scale(0.5);
+    opacity: .8}
+50% {
+    transform: scale(1.1);
+    opacity: 1}
+100% {
+    transform: scale(1)}
+}
+@keyframes grow-icon {
+    0% {
+    transform: scale(0.5);
+    opacity: .8}
+50% {
+    transform: scale(1.1);
+    opacity: 1}
+100% {
+    transform: scale(1)}
+}
