--- a/src/client/pages/home/index.scss
+++ b/src/client/pages/home/index.scss
@@ -114,6 +114,50 @@
     --gc-red-text-color: #ff595a;
     --gc-right-column-width: 26.25rem;
 }
+.night {
+    --body-background-color: #181818;
+    --background-color-true: #181818;
+    --background-color: var(--background-color-true);
+    --border-color: #0f0f0f;
+    --surface-color-rgb: 33, 33, 33;
+    --surface-color: #212121;
+    --scrollbar-color: rgba(255, 255, 255, .2);
+    --section-box-shadow-color: rgba(0, 0, 0, .12);
+    --input-search-background-color: #181818;
+    --input-search-border-color: #2f2f2f;
+    --primary-color: #8774E1;
+    --light-primary-color: rgba(135, 116, 225, 0.08);
+    --light-filled-primary-color: #292830;
+    --dark-primary-color: #6a52da;
+    --primary-text-color: #fff;
+    --secondary-color: #707579;
+    --secondary-text-color: #aaaaaa;
+    --light-secondary-text-color: rgba(170, 170, 170, 0.08);
+    --danger-color: #ff595a;
+    --light-danger-color: rgba(255, 89, 90, 0.08);
+    --avatar-online-color: #0ac630;
+    --avatar-color-top: var(--peer-avatar-violet-top);
+    --avatar-color-bottom: var(--peer-avatar-violet-bottom);
+    --chatlist-status-color: var(--primary-color);
+    --chatlist-pinned-color: var(--secondary-color);
+    --badge-text-color: #fff;
+    --link-color: var(--primary-color);
+    --ripple-color: rgba(255, 255, 255, .08);
+    --poll-circle-color: #fff;
+    --spoiler-background-color: #373e4e;
+    --spoiler-draft-background-color: #484848;
+    --message-background-color: var(--surface-color);
+    --message-checkbox-color: var(--primary-color);
+    --message-checkbox-border-color: #fff;
+    --message-secondary-color: var(--secondary-color);
+    --message-out-background-color: #8774E1;
+    --light-message-out-background-color: rgba(135, 116, 225, 0.08);
+    --dark-message-out-background-color: #6a52da;
+    --message-out-link-color: #fff;
+    --message-out-primary-color: #fff;
+    --light-filled-message-out-primary-color: #917fe3;
+    --message-out-status-color: rgba(255, 255, 255, .6);
+    --message-out-audio-play-button-color: var(--message-out-background-color)}
 @media only screen and (max-width: 600px) {
     :root {
     --right-column-width: 100vw;
@@ -379,7 +423,7 @@ body.animation-level-2 .page-chats .main-column {
 }
 .sidebar-header {
     background-color: #fff;
-    // background-color: var(--surface-color);
+    background-color: var(--surface-color);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -406,13 +450,13 @@ body.animation-level-2 .page-chats .main-column {
 .input-search-input {
     --height: 42px;
     background-color: #fff;
-    // background-color: var(--input-search-background-color);
+    background-color: var(--input-search-background-color);
     padding: 0px calc(var(--height) + 3px - var(--border-width));
     height: var(--height);
     min-height: var(--height) !important;
     max-height: var(--height) !important;
     border-color: #dfe1e5;
-    // border-color: var(--input-search-border-color);
+    border-color: var(--input-search-border-color);
     line-height: var(--height);
 }
 .input-field-input {
@@ -420,10 +464,10 @@ body.animation-level-2 .page-chats .main-column {
     --padding-horizontal: 1rem;
     --border-width: 1px;
     border: var(--border-width) solid #dfe1e5;
-    // border: var(--border-width) solid var(--input-search-border-color);
+    border: var(--border-width) solid var(--input-search-border-color);
     border-radius: var(--border-radius);
     background-color: #fff;
-    // background-color: var(--surface-color);
+    background-color: var(--surface-color);
     // padding: calc(var(--padding) - var(--border-width));
     box-sizing: border-box;
     width: 100%;
@@ -793,22 +837,32 @@ avatar-element img {
     overflow: hidden;
     background-color: #e6ebee;
 }
-.chat-background-item.is-visible:not(.backwards) {
-    transition: opacity .3s cubic-bezier(.4, .0, .2, 1);
-    transition: opacity var(--transition-standard-in);
-    opacity: 1;
-}
+html.night .chat-background {
+    background-color: #dfe1e5;
+    background-color: var(--border-color)}
 .chat-background-item {
-    transition: opacity .25s cubic-bezier(.4, .0, .2, 1);
-    transition: opacity var(--transition-standard-out);
-    opacity: 0;
-}
-.chat-background-item {
-    background-image: url(../../../assets/img/bg.jpeg);
+    // background-image: url("../../../assets/img/bg.jpeg");
     background-size: cover;
     background-position: center center;
     background-color: inherit;
 }
+body.animation-level-2 .chat-background-item {
+    transition: opacity .25s cubic-bezier(.4, .0, .2, 1);
+    transition: opacity var(--transition-standard-out);
+    opacity: 0;
+}
+body.animation-level-2 .chat-background-item.is-visible:not(.backwards) {
+    transition: opacity .3s cubic-bezier(.4, .0, .2, 1);
+    transition: opacity var(--transition-standard-in);
+    opacity: 1;
+}
+// .chat-background-item {
+//     background-image: url(../../../assets/img/bg-animals.png), url(../../../assets/img/bg-minimum.png);
+//     background-size: cover, cover;
+//     background-repeat: no-repeat, repeat;
+//     background-position: center center, center center;
+//     background-color: inherit;
+// }
 .chat-background, .chat-background-item {
     position: absolute !important;
     top: 0;
@@ -1415,9 +1469,9 @@ input, [contenteditable=true] {
 @media only screen and (min-width: 1276px){
     #column-right {
         width: calc(var(--right-column-width) + 1px);
-        // transform: translate3d(calc(var(--right-column-width) + 1px), 0, 0);
+        transform: translate3d(calc(var(--right-column-width) + 1px), 0, 0);
         border-left: 1px solid #dfe1e5;
-        // border-left: 1px solid var(--border-color);
+        border-left: 1px solid var(--border-color);
     }
     .bubbles-inner {
         width: calc(100% - var(--right-column-width));
@@ -1457,7 +1511,7 @@ input, [contenteditable=true] {
         height: 100vh;
         width: 1px;
         background-color: #dfe1e5;
-        // background-color: var(--border-color);
+        background-color: var(--border-color);
         right: -1px;
         top: 0;
         z-index: 2;
@@ -1934,4 +1988,26 @@ to {
 100% {
     transform: scale(1);
     opacity: 1}
+}
+
+.chat-background-item-pattern-canvas {
+    mix-blend-mode: overlay;
+}
+.chat-background-item-color-canvas {
+    height: 100%;
+    -webkit-mask-size: cover;
+    mask-size: cover;
+    -webkit-mask-position: center;
+    mask-position: center;
+}
+.chat-background-item-canvas {
+    --opacity-max: 1;
+    opacity: var(--opacity-max);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+canvas {
+    display: inline-block;
 }
